objects/ssot__PartyAward__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AwardDate__c</fullName>
        <label>Award Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__AwardIdentifier__c</fullName>
        <label>Award Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AwardIssuerName__c</fullName>
        <label>Award Issuer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AwardStatus__c</fullName>
        <label>Award Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AwardVerificationStatus__c</fullName>
        <label>Award Verification Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Party Award Id</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IssuingPartyId__c</fullName>
        <label>Issuing Party</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReceivingPartyId__c</fullName>
        <label>Receiving Party</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__VerifiedDate__c</fullName>
        <label>Verified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1720291139437_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PartyAward_ReceivingPartyId_map_Part_rel</label>
        <referenceTo>ssot__Party__dlm</referenceTo>
        <relationshipLabel>PartyAward_ReceivingPartyId_map_Part_rel</relationshipLabel>
        <relationshipName>rel_1720291139437_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1720291147801_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PartyAward_IssuingPartyId_map_Party__rel</label>
        <referenceTo>ssot__Party__dlm</referenceTo>
        <relationshipLabel>PartyAward_IssuingPartyId_map_Party__rel</relationshipLabel>
        <relationshipName>rel_1720291147801_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>